--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -66,6 +66,8 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.Documents-com=C:\\Users\\Tesoem\\Documents\\gson
+javadoc.reference.Documents-META-INF=C:\\Users\\Tesoem\\Documents\\versions
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -90,5 +92,6 @@ run.test.classpath=\
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
+source.reference.Documents-META-INF=C:\\Users\\Tesoem\\Documents\\maven
 src.dir=src
 test.src.dir=test
